# extruder

./: .gitignore  README.md  __init__.py  __main__.py  config.py  init.py  pyproject.toml  sol2ts.py  test_transpiler.py  transpiler-config.json  tsconfig.json
codegen/: __init__.py  abi.py  base.py  context.py  contract.py  definition.py  diagnostics.py  expression.py  function.py  generator.py  imports.py  metadata.py  replacement_stub.py  statement.py  type_converter.py  yul.py
dependency_resolver/: __init__.py  name_inferrer.py  resolver.py
docs/: configuration.md  extending.md  init.md  quickstart.md  runtime-replacements.md  runtime.md  semantics.md
lexer/: __init__.py  lexer.py  tokens.py
parser/: __init__.py  ast_nodes.py  parser.py  visitor.py
runtime/: EnumerableSetLib.ts  Ownable.ts  base.ts  index.ts
type_system/: __init__.py  mappings.py  registry.py
